# TF-Automation-Python

TerraformCloud/: Makefile  README.rst  conf.ini  conf.py  main.py  requirements.txt
TerraformCloud/AgentDetails/: README.rst  pyproject.toml  setup.py
TerraformCloud/AgentDetails/src/: Agent.py  FuLogJSON.py
TerraformCloud/jsonfiles/: .gitignore  XXXDatacenterXXXX-Template.JSON
