[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AgentDetails"
version = "0.0.1"
authors = [
  { name="Garrett Pearson", email="garrett.pearson@united.com" },
]
description = "Agent Details Module"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]